Neater chrome extension implementation without proxy server

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -9,8 +9,11 @@
         "storage"
     ],
     "host_permissions": [
-        "https://www.youtube.com/*"
+        "https://www.dreamingspanish.com/*"
     ],
+    "background": {
+        "service_worker": "background.js"
+    },
     "action": {
         "default_popup": "options.html"
     },
