--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -11,6 +11,10 @@
     "host_permissions": [
         "https://www.dreamingspanish.com/*"
     ],
+    "icons":
+        {
+            "128": "images/ds-logo.png"
+        },
     "background": {
         "service_worker": "background.js"
     },
