Caption Word Storage Functionality

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Spanis CI Tracker",
+    "name": "Spanish CI Tracker",
     "version": "1.0",
     "manifest_version": 3,
     "description": "This chrome extension stores comprehensible input from YouTube to Dreaming Spanish with the click of a button.",
